# RosBot

./: LICENSE
install/: local_setup.sh  setup.sh
install/rosbot_cpp_examples/share/rosbot_cpp_examples/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rosbot_cpp_examples/share/rosbot_cpp_examples/cmake/: rosbot_cpp_examplesConfig.cmake
install/rosbot_py_examples/share/rosbot_py_examples/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/rosbot_cpp_examples/: CMakeLists.txt  package.xml
src/rosbot_cpp_examples/src/: simple_publisher.cpp  simple_subscriber.cpp
src/rosbot_py_examples/: package.xml  setup.cfg  setup.py
src/rosbot_py_examples/rosbot_py_examples/: simple_publisher.py  simple_subscriber.py
